# ArtRec

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_local.cmd  run_local.sh
.github/workflows/: ci.yml
artifacts/: README.md  business_metrics.json  business_report.md  drift_report.json  manifest.json  model_comparison.json  model_comparison.md  model_metrics.json  ranker.joblib  retriever.joblib  semantic_retriever.joblib
data/eval/: rag_gold.jsonl
data/processed/: test_features.csv  (+3 more)
docs/: BUSINESS_CASE.md  DATA_CARD.md  DEPLOYMENT_NOTES.md  ENGINEERING_NOTES.md  EVALUATION_LIMITATIONS.md  EXPERIMENTATION_PLAN.md  KPI_DICTIONARY.md  LIMITATIONS.md  MLOPS_PLAN.md  MODEL_CARD.md  PRODUCT_FEEDBACK_LOOP.md  RELEASE_CHECKLIST.md  SCALE_PLAN.md  SECURITY.md  SYSTEM_OVERVIEW.md  agentic_rag_system.md  llm_evaluation_framework.md
ops/: alerts.yml  prometheus.yml
reports/: ab_test_lift_summary.csv  ab_test_simulation.md  ab_test_simulation_results.csv  business_tradeoff_metrics.csv  business_tradeoff_report.md  cohort_retention.csv  cohort_retention_summary.md  sequential_baseline_results.csv  sequential_baseline_summary.md  uplift_by_segment.csv  uplift_summary.md  user_segments_summary.md
scripts/: build_all.py  build_user_segments.py  check_drift.py  evaluate_agentic_rag.py  evaluate_sequential_baselines.py  evaluate_system.py  fetch_met_sample.py  generate_business_tradeoff_report.py  generate_catalog.py  generate_cohort_retention.py  load_test.py  run_ab_test_simulation.py  run_uplift_analysis.py  simulate_data.py  train_ranker.py
tests/: test_agentic_document_intelligence.py  test_api_smoke.py  test_artifacts_and_metrics.py  test_bundled_demo_artifacts.py  test_decision_intelligence.py  test_drift_monitoring.py  test_semantic_search.py  test_simulator.py  test_training_smoke.py
(+44 files in other folders)
