[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "artrec-production"
version = "0.1.0"
description = "Production-style art recommendation system with synthetic art behavior simulation."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "fastapi>=0.128,<0.129",
    "uvicorn>=0.40,<0.41",
    "httpx>=0.27,<1.0",
    "pydantic>=2.12,<2.13",
    "prometheus-client>=0.23,<0.24",
    "requests>=2.32,<2.33",
    "streamlit>=1.52,<1.53",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
